tests/ui/unit_struct.rs
#[vecn::vector]
struct Unit;

fn main() {}
